Fixed no-wrapping bug

--- a/angular/src/app/search/search-tables/search-tables.component.scss
+++ b/angular/src/app/search/search-tables/search-tables.component.scss
@@ -33,6 +33,10 @@ table {
 td, th {
   border: 1px solid $color-grey-light;
   padding: 1rem;
+
+  &.no-wrap {
+    white-space: nowrap;
+  }
 }
 
 .run-workflow {
